# clippyrs

./: Cargo.toml  README.md
src/: main.rs  ollama.rs
