[package]
name = "clippyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
copypasta-ext = "0.4.4"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
meval = "0.2.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.121"
termimad = "0.29.4"
tokio = { version = "1.39.2", features = ["macros", "full"] }
url = "2.5.2"
url_open = "0.0.2"
